--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,13 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="../img/Logo Amazing Events.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Logo_A_E.png" type="image/x-icon">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
-    
+    <header>
+
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
+            <img class="logo" src="../img/Logo_Amazing_Events.png" alt="logo">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarsExample04">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./upcoming_events.html">Upcoming
+                                Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./past_events.html">Past Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./stats.html">Stats</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main class="container d-flex flex-wrap justify-content-center py-5">
+        <section class="color formulario ">
+            <h1>Contact</h1>
+            <form class="row g-3 needs-validation ">
+                <div class="col-md-4">
+                    <label for="validationCustom01" class="form-label">Name: </label>
+                    <input type="text" class="form-control" id="validationCustom01" value="" placeholder="Name" required>
+                </div>
+                <div class="col-md-4">
+                    <label for="email" class="form-label">Email: </label>   
+                    <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                </div>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                    <label for="floatingTextarea2">Mensagge: </label>
+                </div>
+                <button class="w-100 btn btn-secondary btn-lg " type="submit">Submit</button>
+            </form>
+        </section>
+    </main>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 ">
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="https://twitter.com"><img src="../img/gorjeo.png" alt="twiter" width="40"
+                height="40">
+            </a></li>
+            <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/"><img src="../img/instagram.png" alt="instagram" width="40"
+                height="40">
+            </a></li>
+            <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/"><img src="../img/facebook.png" alt="facebook" width="40"
+                height="40">
+            </a></li>
+        </ul>
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
+            <span class="color mb-3 mb-md-0">© 2023 SMB</span>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
