--- a/pages/stats.html
+++ b/pages/stats.html
@@ -1,16 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="../img/Logo Amazing Events.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/Logo_A_E.png" type="image/x-icon">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
+
 <body>
+    <header>
+
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
+            <img class="logo" src="../img/Logo_Amazing_Events.png" alt="logo">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarsExample04">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./upcoming_events.html">Upcoming
+                                Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./past_events.html">Past Events</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Stats</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="container">
+      <section class="color py5">
+        <h1>Stats</h1>
+        <div class="tabla d-flex justify-content-center align-items-center py-5">
+          <table class="table table-bordered table table-dark table-striped-columns border-light">
+            <colgroup>
+              <col span="1">
+              <col span="1">
+              <col span="1">
+            </colgroup>
+            <thead>
+              <tr>
+                <th colspan="3">Events statistics</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Events with the highest percentage of attendance</td>
+                <td>Events with the lowest percentage of attendance</td>
+                <td>Events with lager capacity</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th colspan="3">Upcoming event statistics by category</th>
+              </tr>
+              <tr>
+                <td>Categories</td>
+                <td>Revenues</td>
+                <td>Percentage of attendance</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th colspan="3">Past Events statistic</th>
+              </tr>
+              <tr>
+                <td>Categories</td>
+                <td>Revenues</td>
+                <td>Percentage of attendance</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    </main>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 ">
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="https://twitter.com"><img src="../img/gorjeo.png" alt="twiter" width="40"
+              height="40">
+          </a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/"><img src="../img/instagram.png" alt="instagram" width="40"
+              height="40">
+          </a></li>
+          <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/"><img src="../img/facebook.png" alt="facebook" width="40"
+              height="40">
+          </a></li>
+      </ul>
+      <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24">
+                  <use xlink:href="#bootstrap"></use>
+              </svg>
+          </a>
+          <span class="color mb-3 mb-md-0 ">© 2023 SMB</span>
+      </div>
+  </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
