--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -106,7 +106,7 @@
                 </button>
             </div>
         </section>
-        <div class="color d-flex justify-content-between py-3 ">
+        <div class="color d-flex flex-wrap justify-content-between py-3 ">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                 <label class="form-check-label" for="inlineCheckbox1">Category</label>
