--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </button>
             </div>
         </section>
-        <div class="color d-flex justify-content-between py-3 ">
+        <div class="color d-flex flex-wrap justify-content-between py-3 ">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
                 <label class="form-check-label" for="inlineCheckbox1">Category</label>
@@ -141,7 +141,7 @@
                     <div class="col">
                         <div class="card shadow-sm ">
                             <img class="bd-placeholder-img card-img-top" width="100" height="225"
-                                src="../img/Cinema.jpg" alt="cine">
+                                src="./img/Cinema.jpg" alt="cine">
                             <h3>Thumbnail</h3>
                             <div class="card-body">
                                 <p class="card-text">This is a wider card with supporting text below as a natural
