--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
             <img class="logo" src="../img/Logo_Amazing_Events.png" alt="logo">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Home</a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -24,6 +24,9 @@
 
                 <div class="collapse navbar-collapse" id="navbarsExample04">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../index.html">Home</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="./upcoming_events.html">Upcoming
                                 Events</a>
@@ -43,7 +46,7 @@
         </nav>
     </header>
 
-    <main class="container d-flex flex-wrap justify-content-center py-5">
+    <main id="mainConSta" class="container d-flex flex-wrap justify-content-center py-5">
         <section class="color formulario ">
             <h1>Contact</h1>
             <form class="row g-3 needs-validation ">
