--- a/pages/stats.html
+++ b/pages/stats.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
             <img class="logo" src="../img/Logo_Amazing_Events.png" alt="logo">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Home</a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -28,11 +28,14 @@
                 <div class="collapse navbar-collapse" id="navbarsExample04">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
+                          <a class="nav-link active" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./upcoming_events.html">Upcoming
                                 Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./past_events.html">Past Events</a>
+                            <a class="nav-link active" aria-current="page" href="./past_events.html">Past Events</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./contact.html">Contact</a>
@@ -45,7 +48,7 @@
             </div>
         </nav>
     </header>
-    <main class="container">
+    <main id="mainConSta" class="container">
       <section class="color py5">
         <h1>Stats</h1>
         <div class="tabla d-flex justify-content-center align-items-center py-5">
