--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -139,113 +139,28 @@
         <div class="album py-5 ">
             <div class="container">
 
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <img class="bd-placeholder-img card-img-top" width="100" height="225"
-                                src="../img/Cinema.jpg" alt="cine">
-                            <h3>Thumbnail</h3>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-outline-secondary">Secondary</button>
+                <div id="card_main" class="row row-cols-1 row-cols-md-3 g-4">
+                    <template id="card_tpl">
+                        <div class="col">       
+                            <div class="card shadow-sm">
+                                <img class="bd-placeholder-img card-img-top" width="100" height="225" src="${image}"
+                                alt="">
+                                <h3 class="card-title"></h3>
+                                <div class="card-body">
+                                    <p class="card-text">${description}</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <a href="./pages/details.html">
+                                                <button type="button" class="btn btn-outline-secondary">Details</button>
+                                            </a>
+                                        </div>
+                                        <small class="card-price">${price}</small>
                                     </div>
-                                    <small class="text-muted">9 mins</small>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <img class="bd-placeholder-img card-img-top" width="100" height="225"
-                                src="../img/Costume_Party.jpg" alt="cine">
-                                <h3>Thumbnail</h3>
-                                
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-outline-secondary">Secondary</button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <img class="bd-placeholder-img card-img-top" width="100" height="225"
-                                src="../img/Food_Fair.jpg" alt="cine">
-                                <h3>Thumbnail</h3>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-outline-secondary">Secondary</button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <img class="bd-placeholder-img card-img-top" width="100" height="225"
-                                src="../img/Marathon.jpg" alt="cine">
-                                <h3>Thumbnail</h3>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-outline-secondary">Secondary</button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <img class="bd-placeholder-img card-img-top" width="100" height="225"
-                                src="../img/Museum_Tour.jpg" alt="cine">
-                                <h3>Thumbnail</h3>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-outline-secondary">Secondary</button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <img class="bd-placeholder-img card-img-top" width="100" height="225"
-                                src="../img/Music_Concert.jpg" alt="cine">
-                                <h3>Thumbnail</h3>
-                            <div class="card-body">
-                                <p class="card-text">This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit longer.</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-outline-secondary">Secondary</button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    </template>
+                </div>       
             </div>
         </div>
 
@@ -275,7 +190,8 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous">
     </script>
-    <script src="./js/amazing.js"></script>
+    <script type="module" src="../js/amazing.js"></script>
+    <script type="module" src="../js/upcoming_events.js"></script>
 </body>
 
 </html>
