--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     
                     <template id="card_tpl">
                         <div class="col">       
-                            <div class="card shadow-sm">
+                            <div class="card shadow-sm h-100">
                                 <img class="bd-placeholder-img card-img-top" width="100" height="225" src="${image}"
                                 alt="">
                                 <h3 class="card-title"></h3>
