--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -144,7 +144,7 @@
                 <div id="card_main" class="row row-cols-1 row-cols-md-3 g-4">
                     <template id="card_tpl">
                         <div class="col">
-                            <div class="card shadow-sm">
+                            <div class="card shadow-sm h-100">
                                 <img class="bd-placeholder-img card-img-top" width="100" height="225" src="${image}"
                                     alt="">
                                 <h3 class="card-title"></h3>
